Consistently use Set.of(), List.of(), and Map.of() where feasible
Closes #4914